squid-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid-proxy
  labels:
    app: squid-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid-proxy
  template:
    metadata:
      labels:
        app: squid-proxy
    spec:
      containers:
        - name: squid
          image: registry.redhat.io/rhel9/squid:5.5
          ports:
            - containerPort: 3128
              protocol: TCP
          volumeMounts:
            - name: squid-config
              mountPath: /etc/squid/squid.conf
              subPath: squid.conf
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: squid-config
          configMap:
            name: squid-config

---
apiVersion: v1
kind: Service
metadata:
  name: squid-proxy
spec:
  selector:
    app: squid-proxy
  ports:
    - port: 3128
      targetPort: 3128
      protocol: TCP
  type: ClusterIP
